# jarkata/spring-data-jpa/src/main/java/org/howe/examples/jpa/PersonApi.java
@@ -4,10 +4,17 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import org.howe.examples.jpa.entity.Person;
+import org.howe.examples.jpa.entity.Preference;
 import org.howe.examples.jpa.service.PersonService;
+
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
-import javax.ws.rs.*;
+import javax.ws.rs.GET;
+import javax.ws.rs.POST;
+import javax.ws.rs.PUT;
+import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
+import javax.ws.rs.QueryParam;
 import javax.ws.rs.core.Response;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -40,6 +47,19 @@ public class PersonApi {
         if (person == null) {
             return Response.status(Response.Status.NOT_FOUND).build();
         } else {
+            return Response.ok(person).build();
+        }
+    }
+
+    @PUT
+    public Response updatePersonPreference(
+            @QueryParam("id") Long id,
+            Preference preference) {
+        Person person = personService.findById(id);
+        if (person == null) {
+            return Response.status(Response.Status.NOT_FOUND).build();
+        } else {
+            personService.updatePerson(person, preference);
             return Response.ok(person).build();
         }
     }
