# jarkata/spring-data-jpa/src/main/java/org/howe/examples/jpa/entity/Person.java
@@ -1,9 +1,27 @@
 package org.howe.examples.jpa.entity;
 
-import javax.persistence.*;
+import com.vladmihalcea.hibernate.type.json.JsonBinaryType;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+import org.hibernate.annotations.Type;
+import org.hibernate.annotations.TypeDef;
+
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.Table;
 
 @Entity
+@AllArgsConstructor
+@NoArgsConstructor
+@Data
+@Builder
 @Table(name="person")
+@TypeDef(name = "jsonb", typeClass = JsonBinaryType.class)
 public class Person {
 
     @Id
@@ -14,32 +32,7 @@ public class Person {
 
     private String address;
 
-    public Long getId() {
-        return id;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public String getAddress() {
-        return address;
-    }
-
-    public void setAddress(String address) {
-        this.address = address;
-    }
-
-    @Override
-    public String toString() {
-        return "Person{" + "id=" + id + ", name= " + name + ", address=" + address + "}";
-    }
+    @Column(columnDefinition = "jsonb")
+    @Type(type = "jsonb")
+    private Preference preference;
 }
